updated ci stuff and support for java 9+
Took 14 minutes